# tikra

data/: meson.build  org.aether.tikra.gschema.xml  tikra.gresource.xml
data/icon/: 128x128.avif  16x16.avif  22x22.avif  24x24.avif  256x256.avif  32x32.avif  48x48.avif  512x512.avif  64x64.avif
src/: AddCityDialog.vala  ClockPage.vala  StopwatchPage.vala  TimerPage.vala  WorldClockPage.vala  application.vala  meson.build  window.vala
